--- a/shop.html
+++ b/shop.html
@@ -129,10 +129,11 @@
         </div>
       </div> -->
   <!-- start of collection -->
+  <a id="llStoreDropIn" href="https://www.localline.ca/firefly-farm-4" style="background-color:#FAFAFB;border:1px solid #424242;border-radius:10px;color:#424242;display:block;margin:auto;clear:both;cursor:pointer;padding:5px;text-decoration:none;width: 250px;box-sizing:border-box;font-family:Helvetica Neue,Helvetica,Arial,sans-serif;text-align:left;" onmouseover="this.style.backgroundColor = '#EEEEEE'" onmouseout="this.style.backgroundColor = '#FAFAFB'" target="_blank"><span style="border-radius:100%;background-color:#00B284;display:inline-block;float:left;height:40px;margin-right:20px;width:40px;"><img src="https://s3.amazonaws.com/localline-mailers-templates-public/staticpages/integrations/shopping-cart.svg" style="height:20px;margin:10px;width:20px;" alt="" /></span><span style="display:block;font-size:12px;font-weight:700;margin-top:4px;">WHOLESALE PORTAL HERE</span><span style="display:block;font-size:10px;margin-top:4px;">CLICK HERE FOR WHOLESALE</span></a>
 
-  <a id="llStoreDropIn" href="https://www.localline.ca/firefly-farm-4" style="background-color:#FAFAFB;border:1px solid #424242;border-radius:10px;color:#424242;display:inline-block;clear:both;cursor:pointer;padding:5px;text-decoration:none;width: 250px;box-sizing:border-box;font-family:Helvetica Neue,Helvetica,Arial,sans-serif;text-align:left;" onmouseover="this.style.backgroundColor = '#EEEEEE'" onmouseout="this.style.backgroundColor = '#FAFAFB'" target="_blank"><span style="border-radius:100%;background-color:#00B284;display:inline-block;float:left;height:40px;margin-right:20px;width:40px;"><img src="https://s3.amazonaws.com/localline-mailers-templates-public/staticpages/integrations/shopping-cart.svg" style="height:20px;margin:10px;width:20px;" alt="" /></span><span style="display:block;font-size:12px;font-weight:700;margin-top:4px;">ORDER PRODUCTS ONLINE</span><span style="display:block;font-size:10px;margin-top:4px;">CLICK HERE TO VISIT OUR STORE</span></a>
 
-  <h1>Shop Coming Soon!</h1>
+  <!-- <h1>Shop Coming Soon!</h1> -->
+  <div id="embedLoc"></div>
 
 
 
@@ -398,6 +399,17 @@
         modal.style.display = "none";
       }
     }
+
+    setTimeout(() => {
+    
+     myFunction22(); 
+    }, 2000)
+
+    // document.getElementById("llEmbeddedStore").onload = function() {myFunction22()};
+
+function myFunction22() {
+  $('#llEmbeddedStore').insertAfter('#embedLoc');
+}
   </script>
 
 
